syntax = "proto3";

package opentelemetry.collector.pdata.xpdata.internal;

option go_package = "go.opentelemetry.io/collector/pdata/xpdata/internal";

import "gogoproto/gogo.proto";

import "opentelemetry/proto/trace/v1/trace.proto";
import "opentelemetry/proto/metrics/v1/metrics.proto";
import "opentelemetry/proto/logs/v1/logs.proto";
import "opentelemetry/proto/common/v1/common.proto";
import "opentelemetry/proto/profiles/v1development/profiles.proto";

// RequestContext represents metadata associated with a telemetry export request.
message RequestContext {
  // Span context encoded using W3C trace context format.
  // This map typically includes "traceparent" and optionally "tracestate" keys.
  // Repeated KeyValue is used over map<string, string> for performance reasons.
  repeated opentelemetry.proto.common.v1.KeyValue span_context_map = 1 [ (gogoproto.nullable) = false ];
}

// The following messages are wrappers around standard OpenTelemetry data types.
// They embed request-level context and a version discriminator to ensure they are not wire-compatible with
// the canonical OpenTelemetry proto messages.
//
// Each wrapper reserves field tag 1 for a `fixed32` (protobuf wire type 5) format_version field, which makes it
// structurally incompatible with the standard OTLP messages which use tag 1 for the data message field (protobuf wire type 2).
// This ensures old and new formats cannot be confused during decoding.

message TracesRequest {
  fixed32 format_version = 1;
  RequestContext request_context = 2;
  opentelemetry.proto.trace.v1.TracesData traces_data = 3;
}

message MetricsRequest {
  fixed32 format_version = 1;
  RequestContext request_context = 2;
  opentelemetry.proto.metrics.v1.MetricsData metrics_data = 3;
}

message LogsRequest {
  fixed32 format_version = 1;
  RequestContext request_context = 2;
  opentelemetry.proto.logs.v1.LogsData logs_data = 3;
}

message ProfilesRequest {
  fixed32 format_version = 1;
  RequestContext request_context = 2;
  opentelemetry.proto.profiles.v1development.ProfilesData profiles_data = 3;
}
